# Python-Developer

./: 01_boas_praticas.py  README.md  pendentes  pyproject.toml  read_me.txt
Codes/: desafio.py  desafio_manipulacao_arquivos.py
FastAPI/: pyproject.toml
FastAPI/dio-blog/: main.py
FastAPI/dio-blog/controllers/: post.py
api_bank/: .gitignore  README.md  check_tables.py  db.sqlite3  init_db.py  pyproject.toml
api_bank/src/: db.py  main.py  security.py
api_bank/src/controllers/: auth.py  user.py
api_bank/src/models/: account.py  transaction.py  user.py
api_bank/src/schemas/: user.py
api_bank/src/services/: account.py  transaction.py  user.py
desenvolvimento_django/: pyproject.toml
desenvolvimento_django/mysite/: db.sqlite3
desenvolvimento_django/mysite/mysite/: admin.py  settings.py  urls.py
desenvolvimento_django/mysite/polls/: admin.py  models.py  views.py
desenvolvimento_django/mysite/polls/migrations/: 0001_initial.py  0002_alter_choice_options_question_active.py
desenvolvimento_django/mysite/tests/polls/: test_models.py
frontend_bank/: .gitignore  index.html  package-lock.json  package.json  script.js
